syntax = "proto3";
option go_package = "grpc/";

message ScriptRequest {
string script_name = 1;
string Content = 2;
}

message ScriptResponse {
   string script_name = 1;
   string script_status = 2;
   string last_run_status = 3;
   Error error = 4;
   string content =5;
   string output =6;
}


message Error {
    string code = 1;
    string type = 2;
    string desc = 3;
}
service ScriptService {
rpc CreateTask(stream ScriptRequest) returns (ScriptResponse) {}
rpc ExecuteTask(ScriptRequest) returns (ScriptResponse) {}
rpc GetTaskStatus(ScriptRequest) returns (ScriptResponse) {}
rpc GetTaskSource(ScriptRequest) returns (ScriptResponse) {}
}